Finished the initial release of DA 29 Lohitya.

--- a/_data/translation/DA_29_ch_Lohitya.yaml
+++ b/_data/translation/DA_29_ch_Lohitya.yaml
@@ -10,23 +10,23 @@ sections:
         - content: '婆羅婆提＝娑羅婆提【宋】【明】 There was confusion regarding the transliterations in this sutra. 娑 appears to have been replaced with 婆 in both Sālavatī and śāla. I’ve emended the text to read Sālavatī and śāla.'
   - paragraphs:
     - taishoref: '0112c23'
-      content: '時，有婆羅門，名曰露遮，住娑羅林中，其村豐樂，人民熾盛，[14]波斯匿王即封此村，與婆羅門以為梵分。此婆羅門七世[15]已來父母真正，不為他人之所輕毀，異典三部諷誦通利，種種經書盡能分別，又能善於大人相法、[16]瞻候吉凶、祭祀儀禮。'
+      content: '時，有婆羅門，名曰露遮，住娑羅林中，其村豐樂，人民熾盛，波斯匿王即封此村，與婆羅門以為梵分。此婆羅門七世已來父母真正，不為他人之所輕毀，異典三部諷誦通利，種種經書盡能分別，又能善於大人相法、瞻候吉凶、祭祀儀禮。'
   - paragraphs:
-    - taishoref: '~0112c23'
+    - taishoref: '112c29'
       content: '聞沙門瞿曇釋種子出家成道，於拘薩羅國人間遊行，至尸舍娑林中，有大名稱，流聞天下，如來、至真、等正覺，十號具足，於諸天、世人、魔、若魔天、沙門、婆羅門眾中自身作證，與他說法，上中下善，義味具足，梵行清淨。「如此真人，宜往覲現，我今寧可往共相見。」'
   - paragraphs:
     - taishoref: '0113a06'
       content: '時，婆羅門即出彼村，詣尸舍婆林中，至世尊所，問訊已，一面坐。佛為說法，示教利喜，婆羅門聞法已，白佛言：「唯願世尊及諸大眾明受我請。」'
-    - taishoref: '~0113a06'
+    - taishoref: '113a09'
       content: '爾時，世尊默然受請。'
   - paragraphs:
     - taishoref: '0113a10'
       content: '彼婆羅門見佛默然，知已許可，即從坐起，遶佛而去。去佛不遠，便起惡見言：「諸沙門、婆羅門多知善法，多所證成，不應為他人說，但自知，休與他說為。譬如有人壞故獄已，更造新獄，斯是貪惡不善法耳。」'
   - paragraphs:
     - taishoref: '0113a14'
-      content: '時，婆羅門還至娑羅林已，即於其夜具辦種種餚饍飲食。時到，語剃頭師言：「汝持我聲，[1]詣尸舍娑林中，白沙門瞿曇：『日時已到，宜知是[2]時。』」'
+      content: '時，婆羅門還至娑羅林已，即於其夜具辦種種餚饍飲食。時到，語剃頭師言：「汝持我聲，詣尸舍娑林中，白沙門瞿曇：『日時已到，宜知是時。』」'
     - taishoref: '0113a18'
-      content: 剃頭師受教即[3]行，往到佛所，禮世尊足白：「時已到，宜知[4]是時。」
+      content: 剃頭師受教即行，往到佛所，禮世尊足白：「時已到，宜知是時。」
   - paragraphs:
     - taishoref: '0113a19'
       content: '爾時，世尊即著衣持鉢，從諸弟子千二百五十人俱，詣娑羅林。'
@@ -36,13 +36,15 @@ sections:
       content: '佛告剃頭師曰：「此是小事，易開化耳。」'
   - paragraphs:
     - taishoref: '0113a27'
-      content: 爾時，世尊至婆羅門舍，就座而坐。時，婆羅門以種種甘饍，手自斟酌，供佛及僧，食訖去鉢，行澡水畢，取一小牀於佛前坐。佛告露遮：「汝[5]昨去我不遠，生惡見言：『諸沙門、婆羅門多知善法，多所證者，不應為他人說，乃至貪惡不善法。』實有是言耶？」
+      content: 爾時，世尊至婆羅門舍，就座而坐。時，婆羅門以種種甘饍，手自斟酌，供佛及僧，食訖去鉢，行澡水畢，取一小牀於佛前坐。
+    - taishoref: '113b01'
+      content: 佛告露遮：「汝昨去我不遠，生惡見言：『諸沙門、婆羅門多知善法，多所證者，不應為他人說，乃至貪惡不善法。』實有是言耶？」
     - taishoref: '0113b04'
       content: '露遮言：「爾，實有此事。」'
   - paragraphs:
     - taishoref: '0113b04'
       content: '佛告露遮：「汝勿復爾生此惡見。所以者何？世有三師可以自誡。云何為三？一者剃除鬚髮，服三法衣，出家修道，於現法中可以除煩惱，又可增益得上人法。而於現法中不除煩惱，不得上人法，己業未成而為弟子說法，其諸弟子不恭敬承事，由復依止與共同住。'
-    - taishoref: '~0113b04'
+    - taishoref: '113b11'
       content: '露遮！彼諸弟子語師言：『師今剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，得上人勝法。而今於現法中不能除煩惱，不得上人勝法。己業未成而為弟子說法，使諸弟子不復恭敬承事供養，但共依止同住而已。』」'
     - taishoref: '0113b16'
       content: '佛言：「露遮！猶如有人壞故獄已，更造新獄，斯則名為貪濁惡法。是為一師可以自誡。是為賢聖戒、律戒、儀戒、時戒。」'
@@ -51,7 +53,7 @@ sections:
       content: '又告露遮：「第二師者，剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，又<sup class="noteref">1</sup>可增益得上人法，而於現法中不能除眾煩惱，雖復少多得上人勝法，己業未成而為弟子說法，其諸弟子不恭敬承事，由復依止與共同住。'
       notes:
         - content: '不＝又【宋】【元】【明】'
-    - taishoref: '~0113b19'
+    - taishoref: '113b24'
       content: '露遮！彼諸弟子語師言：『師今剃除鬚髮，服三法衣，出家修道，於現法中可<sup>1</sup>得除眾煩惱，得上人法。而今於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，使諸弟子不復恭敬承事供養，但共依止同住而已。』」'
       notes:
         - content: '得＝可得【宋】【元】【明】'
@@ -60,16 +62,16 @@ sections:
   - paragraphs:
     - taishoref: '0113c03'
       content: '又告露遮：「第三師者，剃除鬚髮，服三法衣，出家修道，於現法中可除煩惱，又可增益得上人法，而於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，其諸弟子恭敬承事，依止同住。'
-    - taishoref: '~0113c03'
+    - taishoref: '0113c08'
       content: '露遮！彼諸弟子語師言：『師今剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，少多得上人法，而今於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，諸弟子恭敬承事，共止同住。』」'
     - taishoref: '0113c13'
       content: '佛言：「露遮！猶如有人捨己禾稼，鋤他田苗，此則名為貪濁惡法。是為三師可以自誡。是為賢聖戒、律戒、儀戒、時戒。'
   - paragraphs:
-    - taishoref: '~0113c13'
+    - taishoref: '0113c16'
       content: '露遮！有一世尊不在世間，不可傾動，云何為一？若如來、至真、等正覺出現於世，乃至得三明，除滅無明，生智慧明，去諸闇冥，出大法光，所謂漏盡智證。所以者何？斯由精勤，專念不忘，樂獨閑居之所得也。露遮！是為第一世尊不在世間，不可傾動。'
   - paragraphs:
-    - taishoref: '~0113c13'
-      content: '露遮！有四沙門果。何者四？謂[13]須陀洹果、[14]斯陀含果、[15]阿那含果、[16]阿羅漢果。云何？露遮！有人聞法應得此四沙門果。若有人遮言：『勿為說法。』設用其言者，彼人聞法得果以不？」'
+    - taishoref: '0113c21'
+      content: '露遮！有四沙門果。何者四？謂須陀洹果、斯陀含果、阿那含果、阿羅漢果。云何？露遮！有人聞法應得此四沙門果。若有人遮言：『勿為說法。』設用其言者，彼人聞法得果以不？」'
     - taishoref: '0113c25'
       content: '答曰：「不得。」'
     - taishoref: 0113c26
@@ -120,7 +122,7 @@ sections:
     - taishoref: 0114a13
       content: '「露遮！若有人語汝言：『彼娑<sup>1</sup>羅婆提村封所有財物。露遮！自用勿給人，物當自用，與他何為？』云何？露遮！設用彼言者，當斷餘人供不？」'
       notes:
-        - content: '波＝娑【宋】【元】【明】 This transliteration makes the most sense.'
+        - content: '波＝娑【宋】【元】【明】.'
     - taishoref: 0114a16
       content: '答曰：「當斷。」'
     - taishoref: 0114a16
