Resolved a footnote in Da 29 sourcetext.

--- a/_data/translation/DA_29_ch_Lohitya.yaml
+++ b/_data/translation/DA_29_ch_Lohitya.yaml
@@ -149,7 +149,7 @@ sections:
     - taishoref: 0114a24
       content: '又問：「不善心者，為生善趣，為墮惡道耶？」'
     - taishoref: 0114a25
-      content: '答[5]曰：「墮惡道。」'
+      content: '答曰：「墮惡道。」'
   - paragraphs:
     - taishoref: 0114a26
       content: '爾時，露遮婆羅門白佛言：「我歸依佛，歸依法，歸依僧，願聽我於正法中為優婆塞，自今已後，盡形壽不殺、不盜、不婬、不欺、不飲酒。」'
