--- a/_data/translation/SA_f28_748-796_en.yaml
+++ b/_data/translation/SA_f28_748-796_en.yaml
@@ -387,7 +387,7 @@ fascicle: 28
         - taishoref: 'x'
           content: 'After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.'
 766:
-    title: ''
+    title: 'The Discipline of the Buddha'
     number: 766
     translator: Charles Patton
     revised: 14 October 2019
@@ -396,7 +396,7 @@ fascicle: 28
         - taishoref: 'x'
           content: 'Thus have I heard:<sup class="noteref">1</sup> One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.'
         - taishoref: 'x'
-          content: 'At that time, the Bhagavān addressed the monks, “Suppose a monk’s right view is pure, cleansed. without troubles, and free of afflictions. When it has yet to arise, it does not arisen except by the disciple of the Buddha. <em>Up to right concentration are also thus described</em>. Suppose his right view is pure, cleansed, without troubles, and free of afflictions. When it has yet to arise, it can arise. <em>Up to right concentration are also thus described</em>.”'
+          content: 'At that time, the Bhagavān addressed the monks, “Suppose a monk’s right view is pure, cleansed. without troubles, and free of afflictions. When that has yet to happen, it does not happen except by the discipline of the Buddha. <em>Up to right concentration are also thus described</em>. Suppose his right view is pure, cleansed, without troubles, and free of afflictions. When it has yet to arise, it can arise. <em>Up to right concentration are also thus described</em>.”'
         - taishoref: 'x'
           content: 'After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.'
     notes:
@@ -421,7 +421,7 @@ fascicle: 28
       - num: 1
         content: ''
 767:
-    title: ''
+    title: 'Wholesome and Unwholesome'
     number: 767
     translator: Charles Patton
     revised: 14 October 2019
@@ -437,9 +437,9 @@ fascicle: 28
           content: 'After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.'
     notes:
       - num: 1
-        content: 'Similar Pali passages are <em>AN</em> 5.52, <em>SN</em> 47.5, and <em>SN</em> 47.45. <em>AN</em> 5.52 and <em>SN</em> 47.5 have only the description of the five coverings. <em>SN</em> 47.45 mentions only the aggregate of the wholesome but defines it at the four abodes of mindfulness. See also <em>EA</em> 32.2 and <em>SA</em> 611 and 725.'
+        content: 'Similar Pali passages are <em>AN</em> 5.52, <em>SN</em> 47.5, and <em>SN</em> 47.45. <em>AN</em> 5.52 and <em>SN</em> 47.5 have only the description of the five coverings. <em>SN</em> 47.45 mentions only the aggregate of the wholesome but defines it as the four abodes of mindfulness. See also <em>EA</em> 32.2 and <em>SA</em> 611 and 725.'
 768:
-    title: ''
+    title: 'Good Friends'
     number: 768
     translator: Charles Patton
     revised: 14 October 2019
