--- a/_data/translation/SA/SA13.3.yaml
+++ b/_data/translation/SA/SA13.3.yaml
@@ -10,7 +10,6 @@ paragraphs:
         content: 'One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.'
   - taisho_line: 198b27
     segments:
-        Ignorance is the lack of knowing. Wholesome and unwholesome things aren’t known as they really are. The blameworthy and blameless, the lower and higher teachings, what’s stained and stainless, what’s discerned and not discerned, what’s dependently arisen and not dependently arisen are not known as they really are. Not knowing them as they really are, a person produces wrong views. After producing wrong views, they can produce wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration.
       - id: 'SA13.3:2.1'
         content: 'At that time, the Bhagavān addressed the monks,'
       - id: 'SA13.3:2.2'
@@ -22,9 +21,9 @@ paragraphs:
       - id: 'SA13.3:2.5'
         content: 'That right view can produce right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.'
       - id: 'SA13.1:2.6'
-        content: ''
+        content: 'x'
       - id: 'SA13.1:2.7'
-        content: ''
+        content: 'x'
   - taisho_line: 198c04
     segments:
       - id: 'SA13.1:3.1'
