--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
@@ -406,7 +406,7 @@ The Bhagavān told him, “Aniruddha, none of you have comprehended these signs,
 
 “Aniruddha, after knowing it thus, I cultivated the concentration with no perception and some contemplation all day, all night, and all day and night. Aniruddha, at that point I practiced in this way.
 
-#### 3. Concentration Without Thought or Investigation
+#### 3. Concentration Without Perception or Contemplation
 
 “Aniruddha, if I cultivated the concentration without perception or contemplation, my mind would be liable to turn to the concentration with perception and contemplation. Thus, I surely wouldn’t lose this knowing and seeing.
 
