--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
@@ -231,10 +231,11 @@ It was then that the great elephant thought, “I’ve freed myself from that he
 
 The Bhagavān then knew that thought in this great elephant’s mind using his knowledge of other minds, and he spoke this verse:
 
-* {:.verse} “An elephant accompanies other elephants  
-  Whose body is complete with tusks;  
-  A heart accompanies other hearts  
+* {:.verse} “An elephant’s accompanied by other elephants
+  Whose body is complete with tusks;
+  A heart’s accompanied by other hearts
   If it’s happy dwelling alone in the forest.”
+
 
 The Bhagavān then gathered up his robe and bowl from the protected temple grove and went to the [Pācīnavaṃsa] temple grove.
 
