--- a/02_madhyama/01_First/01_Sevens/MA_001.md
+++ b/02_madhyama/01_First/01_Sevens/MA_001.md
@@ -14,7 +14,7 @@ Thus I have heard:[\[1\]](#notes) One time, the Buddha traveled to the country o
 
 It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he will attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? Namely, a monk knows the Dharma, knows the meaning, knows the time, knows moderation, knows himself, knows the assembly, and knows the superiority of people.
 
-#### 1. Knowing the Dharma {#n2}
+#### Knowing the Dharma {#n2}
 
 “How does a monk know the Dharma? It means a monk knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.  This is called a monk who knows the Dharma.
 
@@ -22,7 +22,7 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 “Suppose there is a monk who well knows the Dharma, which is to say that he knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who well knows the Dharma.
 
-#### 2. Knowing the Meaning
+#### Knowing the Meaning
 
 “How does a monk know the meaning? It means a monk knows the meaning of this or that expression is this or that meaning. This is called a monk who knows the meaning.
 
@@ -31,7 +31,7 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 “Suppose there is a monk who well knows the meaning, [421b] which is to say that he knows the meaning of this or that expression is this or that meaning. This is called a monk who well knows the meaning.
 
-#### 3. Knowing the Time
+#### Knowing the Time
 
 “How does a monk know the time? It means a monk knows the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances.[\[3\]](#notes) This is called a monk who knows the time.
 
@@ -40,7 +40,7 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 “Suppose there is a monk who well knows the time, which is to say that he knows the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances. This is called the monk who well knows the time.
 {:#n4}
 
-#### 4. Knowing Moderation
+#### Knowing Moderation
 
 “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, laying down, speaking, being silent, relieving himself,[\[4\]](#notes) rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation.
 
@@ -48,7 +48,7 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 “Suppose there is a monk who well knows moderation, which is to say that he well knows it whether he is drinking, eating, departing, standing, sitting, laying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who well knows moderation.
 
-#### 5. Knowing Oneself
+#### Knowing Oneself
 
 “How does a monk know himself? It means a monk knows ‘Such are my belief, discipline, learning, generosity, wisdom, discernment, Āgamas, and attainments.’ This is called a monk who knows himself.
 
@@ -57,7 +57,7 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 “Suppose a monk well knows himself, which is to say that he knows ‘Such are my belief, discipline, learning, generosity, wisdom, discernment, Āgamas, and attainments.’ This is called a monk who well knows himself.
 
-#### 6. Knowing the Assembly
+#### Knowing the Assembly
 
 “How does a monk know the assembly? It means a monk knows ‘This is an aristocratic assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly.[\[5\]](#notes) In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
 
@@ -65,7 +65,7 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 “Suppose there is a monk who well knows the assembly, which is to say that he well knows ‘This is an aristocratic assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly. In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who well knows the assembly.
 
-#### 7. Knowing the Superiority of People
+#### Knowing the Superiority of People
 
 “How does a monk know the superiority of people? It means a monk knows there are two kinds of people: believers and non-believers. If someone is a believer, he is superior; a non-believer is not.
 
@@ -93,7 +93,8 @@ The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and
 {:#notes}
 
 ### Endnotes
-1. Parallels include AN 7.68, EA 39.1, T27, and T1536.437b18-437c10. [\[back\]](#n1)
+
+1. Parallels include AN 7.68, EA 39.1, T27, and T1536.437b18-c10. [\[back\]](#n1)
 2. This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā). Using the traditional Sanskrit interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#n2)
 3. This passage is cryptic. A source that I have found that helps us interpret it is a parallel passage in Xuanzang’s **Saṃgītiparyāya Abhidharma** (T1536.437b24-26), which reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#n3)
 4. *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#n4)
