--- a/02_madhyama/01_First/01_Sevens/MA_002.md
+++ b/02_madhyama/01_First/01_Sevens/MA_002.md
@@ -6,50 +6,69 @@ base: ../../../
 previous: MA_001.html
 next: MA_003.html
 ---
-# [The Medium Discourses](../../index.html)
+# [The Medium Discourses](../../index.html) {#n1}
 ## [Chapter 1: Sevens](index.html)
 ### 2. The Pārijāta Tree
 
-Thus I have heard: One time, the Buddha traveled to the kingdom of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+Thus I have heard:[\[1\]](#notes) One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 
-At that time, the Bhagavān addressed the monks: “If the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree wither and yellow, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s leaves fall.
+#### The Seasons of the Pārijāta Tree
 
-“Furthermore, once the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree have fallen, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s leaves will grow back again.
+It was then that the Bhagavān addressed the monks, “If the leaves of the Trāyastriṃśa Heaven’s pārijāta tree  wither and yellow, then the Trāyastriṃśa gods  are delighted and rejoice.[\[2\]](#notes) It won’t be long before the pārijāta tree’s leaves will fall.
 
-“Furthermore, once the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree have grown back again, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree grows webs [of buds].
+“Furthermore, once the leaves of the Trāyastriṃśa Heaven’s pārijāta tree have fallen, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree’s leaves will grow back again.
 
-“Furthermore, once the Trāyastriṃśa Heaven’s Pārijāta Tree has grown webs, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s [buds] grow like bird beaks.
+“Furthermore, once the leaves of the Trāyastriṃśa Heaven’s pārijāta tree have grown back again, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree grows webs [of buds].[\[3\]](#notes)
 
-[422b] “Furthermore, once the Trāyastriṃśa Heaven’s Pārijāta Tree has grown [buds] like bird beaks, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s [buds] will open like bowls.
+“Furthermore, once the Trāyastriṃśa Heaven’s pārijāta tree has grown webs, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree’s [buds] grow like bird beaks.[\[4\]](#notes)
 
-“Furthermore, once the [buds] of Trāyastriṃśa Heaven’s Pārijāta Tree have opened like bowls, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree will be in full bloom.
+[422b] “Furthermore, once the Trāyastriṃśa Heaven’s pārijāta tree has grown [buds] like bird beaks, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree’s [buds] will open like bowls.
+{:#n5}
 
-“Once the Pārijāta Tree has fully bloomed, the light that it shines, the colors that it reflects, and the fragrance that it produces have a range of a hundred yojanas. During the four months of summer, the Trāyastriṃśa gods then entertain themselves with the five heavenly pleasures and the virtues with which they are endowed. This is called the festival under the Trāyastriṃśa Heaven’s Pārijāta Tree.
+“Furthermore, once the [buds] of Trāyastriṃśa Heaven’s pārijāta tree have opened like bowls, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree will be in full bloom.
 
-“The meaning of the noble disciple is also so. When he considers leaving home, then the disciple is called ‘leaves turning yellow’ like the withering and yellowing leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree.
+“Once the pārijāta tree has fully bloomed, the light that it shines, the color that it reflects, and the fragrance that it produces have a range of a hundred leagues.[\[5\]](#notes1) During the four months of summer, the Trāyastriṃśa gods then entertain themselves with the five heavenly pleasures and the virtues with which they’re endowed. This is called the festival under the Trāyastriṃśa Heaven’s pārijāta tree.
 
-“Furthermore, the noble disciple shaves off his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path. The noble disciple then is called ‘falling leaves’ like the leaves falling from the Trāyastriṃśa Heaven’s Pārijāta Tree.
+#### The Seasons of the Noble Disciple {#n6}
 
-“Furthermore, the noble disciple parts with desire and parts with evil or unwholesome things. With thought and investigation, this seclusion produces joy and happiness, and he attains the accomplishment of the first meditation. The noble disciple then is called ‘leaves growing back again’ like the leaves growing back on the Trāyastriṃśa Heaven’s Pārijāta Tree.
+“This meaning is also the case for the noble disciple. When he considers leaving home, then the disciple is called ‘leaves turning yellow.’ He’s like the withering and yellowing leaves of the Trāyastriṃśa Heaven’s pārijāta tree.
 
-“Furthermore, once the noble disciple’s thought and investigation have stopped, he possesses an inner stillness and unified mind without thought or investigation. This concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds]’ like the Trāyastriṃśa Heaven’s Pārijāta Tree growing webs [of buds].
+“Furthermore, when he shaves off his beard and hair, puts on reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path, the noble disciple then is called ‘falling leaves.’ He’s like the leaves falling from the Trāyastriṃśa Heaven’s pārijāta tree.
 
-“Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness that’s described by the nobles as the noble’s equanimity, mindfulness, happy abode, and emptiness. He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks’ like the Trāyastriṃśa Heaven’s Pārijāta Tree growing [buds] like bird beaks.
+“Furthermore, he parts with desire and parts with bad and unwholesome things.[\[6\]](#notes1) With perception and contemplation, this seclusion produces joy and happiness, and he attains the accomplishment of the first meditation. The noble disciple then is called ‘leaves growing back again.’ He’s like the leaves growing back on the Trāyastriṃśa Heaven’s pārijāta tree.
+{:#n7}
 
-“Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he attains the accomplishment of the fourth meditation. The noble disciple then is called ‘becoming like a bowl’ like the Trāyastriṃśa Heaven’s Pārijāta Tree [buds] becoming like bowls.
+“Furthermore, once perception and contemplation have stopped, the noble disciple possesses an inner stillness and unified mind without perception or contemplation. This concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
 
-“Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present, he knows and recognizes for himself the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He is no longer subject to existence and knows it as it really is. The noble disciple then is called ‘in full bloom’ like the Trāyastriṃśa Heaven’s Pārijāta Tree in full bloom.
+“Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness, which described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness.[\[7\]](#notes1) He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
 
-“He is an arhat monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Assembly Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town [422c] shaved off his beard and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present, he knew and recognized for himself the accomplishment of self-realization: “Birth has been ended, the religious practice has been established, and the task has been accomplished.” He is no longer subject to existence and knows is as it really is.’
+“Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he attains the accomplishment of the fourth meditation. The noble disciple then is called ‘becoming like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds] becoming like bowls.
 
-“This is called the assembly that coincides with the end of an arhat’s contaminants, which is like the festival held under the Trāyastriṃśa Heaven’s Pārijāta Tree.”
+“Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present life, he knows and recognizes for himself the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He is no longer subject to existence and knows it as it really is. The noble disciple then is called ‘in full bloom.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree in full bloom.
 
-The Buddha spoke thus. Those monks who heard what the Buddha had taught rejoiced and handed it down.
+#### Conclusion
+
+“He is an arhat monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Assembly Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town [422c] shaved off his beard and hair, put on reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present life, he knew and recognized for himself the accomplishment of self-realization: “Birth has been ended, the religious practice has been established, and the task has been accomplished.” He is no longer subject to existence and knows it as it really is.’
+
+“This is called the assembly that coincides with the end of an arhat’s contaminants, which is like the festival held under the Trāyastriṃśa Heaven’s pārijāta tree.”
+
+The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
+{:#notes}
+
+### Endnotes
+1. Parallels include AN 7.69, EA 39.2, and T28. [\[back\]](#n1)
+2. *Trāyastriṃśa Heaven*. The Chinese translates trāyastriṃśa literally as Heaven of Thirty-Three. This was the heaven of the traditional vedic gods ruled by Indra.  
+*pārijāta*. The Chinese seems to be an abbreviated transliteration ‘jata,’ but presumably the full Sanskrit name would have been pārijāta(ka) (P. pāricchattaka). It's the present day name for *Nyctanthes arbor-tristis*, commonly called the night-flowering jasmine tree in English. The heavenly tree may have been imagined to resemble this South Asian tree, but it was described as being enormous in the Trāyastriṃśa Heaven, taking up the space of an entire grove. [\[back\]](#n1)
+3. {:#notes1} Pali: Na cirass’eva dāni jālakajāto bhavissati. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” The Chinese term can also be understood as “web,” describing the overall appearance of a budding tree. [\[back\]](#n1)
+4. Pali: Na cirass’eva dani kharakajato bhavissati. Bhikkhu Bodhi translate the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means "bird's beak;" presumably, it refers to the shape of the buds as they develop. [\[back\]](#n1)
+5. *hundred leagues*. The Chinese transliterates yojana, an Indic measure of distance roughly equivalent to a league. Traditional accounts of a yojana range from 7 to 9 miles. [\[back\]](#n5)
+6. *bad and unwholesome things*. Elsewhere in MĀ, this general expression is glossed as a catchall for the three poisons and other emotional and behavioral things that reinforce rather than overcome the root of ignorance. [\[back\]](#n6)
+7. *emptiness*. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings (“emptiness,” “dwelling,” and “concentration”) that are visually very similar in Chinese. The Taisho editors corrected some of these passages to read “dwelling” but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is how I’ve translated them. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#n7)
 
 ---
 
 Translator: Charles Patton
 
-Last Revised: 18 February 2020
+Last Revised: 21 February 2020
 
 ---
