--- a/02_madhyama/01_First/01_Sevens/MA_002.md
+++ b/02_madhyama/01_First/01_Sevens/MA_002.md
@@ -63,7 +63,7 @@ The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and
 4. Pali: Na cirass’eva dani kharakajato bhavissati. Bhikkhu Bodhi translate the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means "bird's beak;" presumably, it refers to the shape of the buds as they develop. [\[back\]](#n1)
 5. *hundred leagues*. The Chinese transliterates yojana, an Indic measure of distance roughly equivalent to a league. Traditional accounts of a yojana range from 7 to 9 miles. [\[back\]](#n5)
 6. *bad and unwholesome things*. Elsewhere in MĀ, this general expression is glossed as a catchall for the three poisons and other emotional and behavioral things that reinforce rather than overcome the root of ignorance. [\[back\]](#n6)
-7. *emptiness*. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings (“emptiness,” “dwelling,” and “concentration”) that are visually very similar in Chinese. The Taisho editors corrected some of these passages to read “dwelling” but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is how I’ve translated them. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#n7)
+7. *emptiness*. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings (“emptiness,” “dwelling,” and “concentration”) that are visually similar in Chinese. The Taisho editors corrected some of these passages to read “dwelling” but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is how I’ve translated them. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#n7)
 
 ---
 
