--- a/02_madhyama/01_First/01_Sevens/MA_002.md
+++ b/02_madhyama/01_First/01_Sevens/MA_002.md
@@ -40,7 +40,7 @@ It was then that the Bhagavān addressed the monks, “If the leaves of the Trā
 
 “Furthermore, once perception and contemplation have stopped, the noble disciple possesses an inner stillness and unified mind without perception or contemplation. This concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
 
-“Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness, which described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness.[\[7\]](#notes1) He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
+“Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness, which is described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness.[\[7\]](#notes1) He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
 
 “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he attains the accomplishment of the fourth meditation. The noble disciple then is called ‘becoming like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds] becoming like bowls.
 
