--- a/02_madhyama/01_First/01_Sevens/MA_002.md
+++ b/02_madhyama/01_First/01_Sevens/MA_002.md
@@ -60,7 +60,7 @@ The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and
 2. *Trāyastriṃśa Heaven*. The Chinese translates trāyastriṃśa literally as Heaven of Thirty-Three. This was the heaven of the traditional vedic gods ruled by Indra.  
 *pārijāta*. The Chinese seems to be an abbreviated transliteration ‘jata,’ but presumably the full Sanskrit name would have been pārijāta(ka) (P. pāricchattaka). It's the present day name for *Nyctanthes arbor-tristis*, commonly called the night-flowering jasmine tree in English. The heavenly tree may have been imagined to resemble this South Asian tree, but it was described as being enormous in the Trāyastriṃśa Heaven, taking up the space of an entire grove. [\[back\]](#n1)
 3. {:#notes1} Pali: Na cirass’eva dāni jālakajāto bhavissati. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” The Chinese term can also be understood as “web,” describing the overall appearance of a budding tree. [\[back\]](#n1)
-4. Pali: Na cirass’eva dani kharakajato bhavissati. Bhikkhu Bodhi translate the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means "bird's beak;" presumably, it refers to the shape of the buds as they develop. [\[back\]](#n1)
+4. Pali: Na cirass’eva dani kharakajato bhavissati. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means "bird's beak;" presumably, it refers to the shape of the buds as they develop. [\[back\]](#n1)
 5. *hundred leagues*. The Chinese transliterates yojana, an Indic measure of distance roughly equivalent to a league. Traditional accounts of a yojana range from 7 to 9 miles. [\[back\]](#n5)
 6. *bad and unwholesome things*. Elsewhere in MĀ, this general expression is glossed as a catchall for the three poisons and other emotional and behavioral things that reinforce rather than overcome the root of ignorance. [\[back\]](#n6)
 7. *emptiness*. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings (“emptiness,” “dwelling,” and “concentration”) that are visually similar in Chinese. The Taisho editors corrected some of these passages to read “dwelling” but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is how I’ve translated them. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#n7)
