MA 73 translation added. Typos in MA 72

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 7. The Legend of King Dīrghāyu'
+title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 72. The Legend of King Dīrghāyu'
 type: kramdown
 base: ../../../
 previous: index.html
+next: MA_073.html
 ---
 # [The Medium Discourses](../../index.html)
 ## [Chapter 7: King Dīrghāyu](index.html)
@@ -282,7 +283,7 @@ Venerable Aniruddha said, “Bhagavān, we are thus always united together, cont
 
 The Bhagavān told him, “Aniruddha, none of you have comprehended these signs, which is to say the signs of apprehending light and seeing forms, and so that vision of forms and light soon disappears again.
 
-“Aniruddha, when I hadn’t yet awakened to the unsurpassed and perfect enlightenment, I also apprehended light and saw forms, and that vision of forms and light would soon disappear again.
+“Aniruddha, when I hadn’t yet awakened to the unsurpassed and true enlightenment, I also apprehended light and saw forms, and that vision of forms and light would soon disappear again.
 
 #### 1. Doubt
 
@@ -389,31 +390,31 @@ The Bhagavān told him, “Aniruddha, none of you have comprehended these signs,
 
 “Aniruddha, I again thought, ‘I will cultivate three concentrations: I’ll cultivate the concentration with perception and contemplation, cultivate the concentration with no perception and some contemplation, and cultivate the concentration without perception or contemplation.’
 
-“Aniruddha, I then cultivated the three concentrations, cultivating the concentration with perception and contemplation, cultivating the concentration with no perception and some contemplation, and cultivating the concentration without perception or contemplation. If I cultivated the concentration with perception and contemplation, my mind would be liable to turn to the concentration with no perception and some contemplation. Thus, I surely wouldn’t lose this knowing and seeing.
+“Aniruddha, I then cultivated the three concentrations, cultivating the concentration with perception and contemplation, cultivating the concentration with no perception and some contemplation, and cultivating the concentration without perception or contemplation. If I cultivated the concentration with perception and contemplation, my mind would be liable to turn to the concentration with no perception and some contemplation. Thus, I surely wouldn’t lose this knowledge and vision.
 
 “Aniruddha, after knowing it thus, I cultivated the concentration with perception and contemplation all day, all night, and all day and night.
 
-“Aniruddha, at that point I practiced in this way. If I cultivated the concentration with perception and contemplation, my mind would be liable to turn to the concentration without perception or contemplation. Thus, I surely wouldn’t lose this knowing and seeing.
+“Aniruddha, at that point I practiced in this way. If I cultivated the concentration with perception and contemplation, my mind would be liable to turn to the concentration without perception or contemplation. Thus, I surely wouldn’t lose this knowledge and vision.
 
 “Aniruddha, after knowing it thus, I cultivated the concentration with perception and contemplation all day, all night, and all day and night. Aniruddha, at that point I practiced in this way.
 
 #### 2. Concentration with No Perception and Some Contemplation
 
-“Aniruddha if I cultivated the concentration with no perception and some contemplation, my mind would be liable to turn to the concentration with perception and contemplation. Thus, I surely wouldn’t lose this knowing and seeing.
+“Aniruddha if I cultivated the concentration with no perception and some contemplation, my mind would be liable to turn to the concentration with perception and contemplation. Thus, I surely wouldn’t lose this knowledge and vision.
 
 “Aniruddha, after knowing it thus, I cultivated the concentration with no perception and some contemplation all day, all night, and all day and night.
 
-“Aniruddha, at that point I practiced in this way. If I cultivated concentration with no perception and some contemplation, my mind would be liable to turn to the concentration without perception or contemplation. Thus, I surely wouldn’t lose this knowing and seeing.
+“Aniruddha, at that point I practiced in this way. If I cultivated concentration with no perception and some contemplation, my mind would be liable to turn to the concentration without perception or contemplation. Thus, I surely wouldn’t lose this knowledge and vision.
 
 “Aniruddha, after knowing it thus, I cultivated the concentration with no perception and some contemplation all day, all night, and all day and night. Aniruddha, at that point I practiced in this way.
 
 #### 3. Concentration Without Perception or Contemplation
 
-“Aniruddha, if I cultivated the concentration without perception or contemplation, my mind would be liable to turn to the concentration with perception and contemplation. Thus, I surely wouldn’t lose this knowing and seeing.
+“Aniruddha, if I cultivated the concentration without perception or contemplation, my mind would be liable to turn to the concentration with perception and contemplation. Thus, I surely wouldn’t lose this knowledge and vision.
 
 “Aniruddha, after knowing it thus, I cultivated the concentration without perception or contemplation all day, all night, and all day and night.
 
-“Aniruddha, at that point I practiced in this way. If I cultivated concentration without perception or contemplation, my mind would be liable to turn to the concentration with no perception and some contemplation. Thus, I wouldn’t lose this knowing and seeing.
+“Aniruddha, at that point I practiced in this way. If I cultivated concentration without perception or contemplation, my mind would be liable to turn to the concentration with no perception and some contemplation. Thus, I wouldn’t lose this knowledge and vision.
 
 “Aniruddha, after knowing it thus, I cultivated concentration without perception or contemplation all day, all night, and [539a] all day and night. Aniruddha, at that point I practiced in this way.
 
