--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
@@ -66,3 +66,11 @@ It was then that the Bhagavān addressed the monks, “Before I had awakened to 
 “If I rightly knew and attained these eight practices, then I could thoroughly declare their attainment. I knew I had awakened to the unsurpassed and true enlightenment. I had gone beyond this world’s gods, Māra, Brahmā, mendicants, and brahmins. I was liberated by various liberations. My mind was free of delusions. I also had ended birth, established the religious practice, accomplished the task, and was no longer subject to existence, knowing it as it really was.”
 
 The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
+
+---
+
+Translator: Charles Patton
+
+Last Revised: 24 February 2020
+
+---
