Fixed typos, added notes.

--- a/02_madhyama/01_First/01_Sevens/MA_003.md
+++ b/02_madhyama/01_First/01_Sevens/MA_003.md
@@ -6,11 +6,11 @@ base: ../../../
 previous: MA_002.html
 next: MA_004.html
 ---
-# [The Medium Discourses](../../index.html)
+# [The Medium Discourses](../../index.html) {#n1}
 ## [Chapter 1: Sevens](index.html)
 ### 3. The City Parable
 
-Thus I have heard:  One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+Thus I have heard:[\[1\]](#notes) One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 
 #### A King’s Border City
 
@@ -31,10 +31,11 @@ It was then that the Bhagavān addressed the monks, “Suppose a king’s border
 “Furthermore, suppose the king’s border city builds a high wall, making it quite strong and coating it with plaster. Those inside are made secure, and outside enemies are kept at bay. This is called the seventh thing with which the king’s city is fully endowed.
 
 “What is the abundance of four foods in the king’s city, which are easy and not difficult to obtain? It means the king’s border city provides for a reserve of water, hay, [423a] and firewood. Those inside are made secure, and outside enemies are kept at bay. This is called the first abundance of food in the king’s city, which is easy and not difficult to obtain.
+{:#n2}
 
 “Furthermore, suppose the king’s border city harvests much rice and stockpiles barley. Those inside are made secure, and outside enemies are kept at bay. This is called the second abundance of food in the king’s city, which is easy and not difficult to obtain.
 
-“Furthermore, suppose the king’s border city stockpiles calabash beans, green grams, and lentils.  Those inside are made secure, and outside enemies are kept at bay. This is called the third abundance of food in the king’s city, which is easy and not difficult to obtain.
+“Furthermore, suppose the king’s border city stockpiles calabash beans, green grams, and lentils.[\[2\]](#notes) Those inside are made secure, and outside enemies are kept at bay. This is called the third abundance of food in the king’s city, which is easy and not difficult to obtain.
 
 “Furthermore, suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, and they are all plentiful. Those inside are made secure, and outside enemies are kept at bay. This is called the fourth abundance of food in the king’s city, which is easy and not difficult to obtain.
 
@@ -92,6 +93,12 @@ The Noble Disciple Is Like the King’s Border City
 “Suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, and they are all plentiful. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth meditation. He lives happily without want. Secure and happy, he brings about Nirvāṇa naturally.”
 
 The Buddha spoke thus. The monks who heard what the Buddha had taught rejoiced and handed it down.
+{:#notes}
+
+### Endnotes
+
+1. Parallel include AN 7.67 and EA 39.4. [\[Back\]](#n1)
+2. *calabash beans, green grams, and lentils*. These are educated guesses based on glosses found in classical dictionaries and patterns of translation in other texts. Essentially, though, it appears to be a list of two or three common Indian legumes. [\[Back\]](#n2)
 
 ---
 
