Added translation of MA 74, edits to MA 73, indices, and what's new.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
@@ -4,12 +4,13 @@ title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 73. Gods'
 type: kramdown
 base: ../../../
 previous: MA_072.html
+next: MA_074.html
 ---
 # [The Medium Discourses](../../index.html)
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 73. The Gods
 
-Thus have I heard:  One time, the Buddha traveled to [Cetīsu] and stayed at Waterside Grove.
+Thus have I heard:  One time, the Buddha traveled to Cedi and stayed at Waterside Grove.
 
 #### 1. Purifying Knowledge and Vision
 
@@ -71,6 +72,6 @@ The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and
 
 Translator: Charles Patton
 
-Last Revised: 24 February 2020
+Last Revised: 28 February 2020
 
 ---
