Added translation of MA 75.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_074.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_074.md
@@ -4,6 +4,7 @@ title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 74. Eight Thoughts'
 type: kramdown
 base: ../../../
 previous: MA_073.html
+next: MA_075.html
 ---
 
 # [The Medium Discourses](../../index.html)
