Added titles to MA 75 that were omitted.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_075.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_075.md
@@ -6,6 +6,10 @@ base: ../../../
 previous: MA_074.html
 ---
 
+# [The Medium Discourses](../../index.html)
+## [Chapter 7: King Dīrghāyu](index.html)
+### 75. The Pure Way to the Imperturbable
+
 Thus have I heard:  One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasādharma].
 
 It was then that the Bhagavān addressed the monks, “Desires are impermanent, fake, and false. These falsehoods then are illusory, deceptive, and foolish. Whether it’s desires in the present life, desires in the afterlife, forms in the present life, or forms in the afterlife, they are all the domain of Māra. They are Māra’s bait. As a result of them, the mind is affected by measureless bad and wholesome things, such as longing, anger, and fighting, which become obstacles when the noble disciple trains.
