Added numbering and ids to paras in MA 75. Implemented scroll padding to offset anchors beneath the header. Fixed anchors and links in MA 1-3.

--- a/02_madhyama/01_First/01_Sevens/MA_001.md
+++ b/02_madhyama/01_First/01_Sevens/MA_001.md
@@ -6,19 +6,20 @@ base: ../../../
 previous: index.html
 next: MA_002.html
 ---
-# [The Medium Discourses](../../index.html) {#n1}
+
+# [The Medium Discourses](../../index.html)
 ## [Chapter 1: Sevens](index.html)
 ### 1. The Good Dharma
 
-Thus I have heard:[\[1\]](#notes) One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 
 It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he will attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? Namely, a monk knows the Dharma, knows the meaning, knows the time, knows moderation, knows himself, knows the assembly, and knows the superiority of people.
 
-#### Knowing the Dharma {#n2}
+#### Knowing the Dharma
 
 “How does a monk know the Dharma? It means a monk knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.  This is called a monk who knows the Dharma.
 
-“Suppose there is a monk who doesn’t know the Dharma, which is to say that he doesn’t know the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.[\[2\]](#notes) Such a monk doesn’t know the Dharma.
+“Suppose there is a monk who doesn’t know the Dharma, which is to say that he doesn’t know the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.[\[2\]](#n2){:#ref2} Such a monk doesn’t know the Dharma.
 
 “Suppose there is a monk who well knows the Dharma, which is to say that he knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who well knows the Dharma.
 
@@ -27,22 +28,20 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 “How does a monk know the meaning? It means a monk knows the meaning of this or that expression is this or that meaning. This is called a monk who knows the meaning.
 
 “Suppose there is a monk who doesn’t know the meaning, which is to say that he doesn’t know the meaning of this or that expression is this or that meaning. Such a monk doesn’t know the meaning.
-{:#n3}
 
 “Suppose there is a monk who well knows the meaning, [421b] which is to say that he knows the meaning of this or that expression is this or that meaning. This is called a monk who well knows the meaning.
 
 #### Knowing the Time
 
-“How does a monk know the time? It means a monk knows the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances.[\[3\]](#notes) This is called a monk who knows the time.
+“How does a monk know the time? It means a monk knows the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances.[\[3\]](#n3){:#ref3} This is called a monk who knows the time.
 
 “Suppose there is a monk who doesn’t know the time, which is to say that he doesn’t know the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances. Such a monk doesn’t know the time.
 
 “Suppose there is a monk who well knows the time, which is to say that he knows the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances. This is called the monk who well knows the time.
-{:#n4}
 
 #### Knowing Moderation
 
-“How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, laying down, speaking, being silent, relieving himself,[\[4\]](#notes) rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation.
+“How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, laying down, speaking, being silent, relieving himself,[\[4\]](#n4){:#ref4} rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation.
 
 “Suppose there is a monk who doesn’t know moderation, which is to say that he doesn’t know it whether he is drinking, eating, departing, standing, sitting, laying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. Such a monk doesn’t know moderation.
 
@@ -53,13 +52,12 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 “How does a monk know himself? It means a monk knows ‘Such are my belief, discipline, learning, generosity, wisdom, discernment, Āgamas, and attainments.’ This is called a monk who knows himself.
 
 “Suppose there is a monk who doesn’t know himself, which is to say that he doesn’t know ‘Such are my belief, discipline, learning, generosity, wisdom, discernment, Āgamas, and attainments.’ Such a monk doesn’t know himself.
-{:#n5}
 
 “Suppose a monk well knows himself, which is to say that he knows ‘Such are my belief, discipline, learning, generosity, wisdom, discernment, Āgamas, and attainments.’ This is called a monk who well knows himself.
 
 #### Knowing the Assembly
 
-“How does a monk know the assembly? It means a monk knows ‘This is an aristocratic assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly.[\[5\]](#notes) In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
+“How does a monk know the assembly? It means a monk knows ‘This is an aristocratic assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly.[\[5\]](#n5){:#ref5} In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
 
 “Suppose there is a monk who doesn’t know the assembly, which is to say that he doesn’t know ‘This is an aristocratic assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly. In those assemblies, I should thus [421c] depart, thus stand, thus sit, thus speak, and thus be silent.’ Such a monk doesn’t know the assembly.
 
@@ -90,15 +88,14 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 “It’s just as there’s milk because of the cow, cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, higher, exceptional, superior, honored, and wondrous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, he is the best, great, higher, exceptional, superior, honored, and wondrous. This is called a monk who knows the superiority of people.”
 
 The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
-{:#notes}
 
 ### Endnotes
 
-1. Parallels include AN 7.68, EA 39.1, T27, and T1536.437b18-c10. [\[back\]](#n1)
-2. This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā). Using the traditional Sanskrit interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#n2)
-3. This passage is cryptic. A source that I have found that helps us interpret it is a parallel passage in Xuanzang’s **Saṃgītiparyāya Abhidharma** (T1536.437b24-26), which reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#n3)
-4. *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#n4)
-5. *Aristocratic … brahmin … householder … mendicant*. The Skt. equivalents are kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. [\[back\]](#n5)
+1. {:#n1} Parallels include AN 7.68, EA 39.1, T27, and T1536.437b18-c10. [\[back\]](#ref1)
+2. {:#n2} This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā). Using the traditional Sanskrit interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#ref2)
+3. {:#n3} This passage is cryptic. A source that I have found that helps us interpret it is a parallel passage in Xuanzang’s **Saṃgītiparyāya Abhidharma** (T1536.437b24-26), which reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#ref3)
+4. {:#n4} *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
+5. {:#n5} *Aristocratic … brahmin … householder … mendicant*. The Skt. equivalents are kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. [\[back\]](#ref5)
 
 ---
 
